--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://nikolai56.github.io/todo-list",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -15,7 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "flow-bin": "^0.90.0"
+    "flow-bin": "^0.90.0",
+    "gh-pages": "^2.0.1"
   }
 }
