--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "homepage": "https://nikolai56.github.io/todo-list",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
