added sortable list of draggable todos with a Dustbin to remove them. With persisting redux state

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/Nikolai56/todo-list.git"
   },
   "dependencies": {
+    "immutability-helper": "^2.9.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dnd": "^7.0.2",
